--- a/frontend/src/screens/HomeScreen/styles.css
+++ b/frontend/src/screens/HomeScreen/styles.css
@@ -1,40 +1,34 @@
 
-.App {
-    text-align: center;
-  }
-  
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
-  .App-header {
-    background-color: color;
-    min-height: 100vh;
+.base-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: #056FF6;
+    height: 100vh;
+    width: 100vw;
+    padding: 20px;
   }
-  
-  .App-link {
-    color: #61dafb;
+
+  .header-container {
+    width: 100%;
   }
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
+
+  .search-container {
+    background-color: red;
+    flex-grow: 1;
+  }
+
+  .header-title {
+    color: white
+  }
+
+  @media only screen and (max-width: 600px) {
+    .base-container {
+      margin: 0;
+      box-sizing: border-box;
+      background-color: red;
+      width: 100vw;
+      padding: 20px;
     }
-    to {
-      transform: rotate(360deg);
-    }
   }
-  
