GA-1: adding in a search bar and search button components + styling

--- a/frontend/src/screens/HomeScreen/styles.css
+++ b/frontend/src/screens/HomeScreen/styles.css
@@ -12,11 +12,15 @@
 
   .header-container {
     width: 100%;
+    text-align: center;
   }
 
   .search-container {
-    background-color: red;
+    display: flex;
     flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
 
   .header-title {
