--- a/frontend/src/screens/HomeScreen/styles.css
+++ b/frontend/src/screens/HomeScreen/styles.css
@@ -21,6 +21,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: chartreuse;
   }
 
   .header-title {
