--- a/frontend/src/views/SearchView/styles.css
+++ b/frontend/src/views/SearchView/styles.css
@@ -1,1 +1,9 @@
 
+.search-container {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+  }
