--- a/frontend/src/components/SearchBar/styles.css
+++ b/frontend/src/components/SearchBar/styles.css
@@ -1,10 +1,11 @@
 
 
 .search-bar {
-    width: 50%;
+    width: 100%;
     height: 30px;
     padding: 10px 20px;
     font-size: 18px;
-    border: 0.6px solid grey;
+    border: 0.2px solid grey;
     border-radius: 15px;
+    box-shadow: 0 2px 7px rgba(0, 0, 0, 0.2);
 }
