--- a/frontend/src/components/TransactionItem/styles.css
+++ b/frontend/src/components/TransactionItem/styles.css
@@ -1,9 +1,9 @@
 
 
 .container {
-    width: 40%;
+    width: 100%;
     height: 100px;
-    background-color: rgb(189, 189, 189);
+    background-color: rgb(232, 225, 225);
     border-radius: 15px;
     margin-bottom: 30px;
     display: flex;
@@ -21,7 +21,7 @@
     justify-content: center;
     align-items: center;
     font-size: 18px;
-    border: 0.6px solid grey;
+    border: 0.6px dashed grey;
     border-radius: 15px 0 0 15px;
     border-left: 0;
     border-top: 0;
