--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,6 +42,7 @@ code {
   display: flex;
   flex-grow: 1;
   flex-direction: column;
+  align-items: center;
 }
 
 @media only screen and (max-width: 600px) {
