--- a/frontend/src/views/ResultsView/styles.css
+++ b/frontend/src/views/ResultsView/styles.css
@@ -4,9 +4,9 @@
     justify-content: flex-start;
     flex-direction: column;
     width: 100%;
+    max-width: 700px;
+
 }
-
-
 
 .title {
     font-size: 30px;
