--- a/frontend/src/views/SearchView/styles.css
+++ b/frontend/src/views/SearchView/styles.css
@@ -5,5 +5,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
+    transition: all 2s ease-in-out; 
+    width: 90%;
+    max-width: 600px;
   }
