--- a/frontend/src/views/SearchView/styles.css
+++ b/frontend/src/views/SearchView/styles.css
@@ -1,11 +1,12 @@
 
 .search-container {
     display: flex;
+    box-sizing: border-box;
     flex-grow: 1;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     transition: all 2s ease-in-out; 
-    width: 90%;
+    width: 100%;
     max-width: 600px;
   }
