--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,13 +47,6 @@ code {
 
 @media only screen and (max-width: 600px) {
   .base-container {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    box-sizing: border-box;
-    background-color: red;
-    height: 100vh;
-    width: 100vw;
-    padding: 20px;
+    background-color: blue;
   }
 }
