GA-1: Now returning many properties with many transactions

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,6 +47,6 @@ code {
 
 @media only screen and (max-width: 600px) {
   .base-container {
-    background-color: blue;
+    background-color: transparent;
   }
 }
